# xiaoyi

./: README.md  index.html  package-lock.json  package.json  settings.html  vite.config.js
src/: App.vue  Settings.vue  dict.js  init.js  main.html  main.js  main.vue  query.js  settings.html  settings.js  settings.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: action.rs  global.rs  hotkey.rs  key.rs  main.rs  mouse.rs  other.rs  tray.rs  utils.rs  window.rs
src/api/: baidu.js  dict.js  query.js
src/components/: FlexWrapper.vue  LoadingView.vue
src/svg-icon/: builder.js  index.vue
src/utils/: md5.js  useDebounce.js
