[package]
name = "xiaoyi"
version = "0.2.7"
description = "一个简单的划词翻译软件，选中文本按下Ctrl-Alt-D显示翻译"
authors = ["kujio"]
license = ""
repository = "https://github.com/ImKujio/xiaoyi"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard", "clipboard-all", "fs-exists", "fs-read-dir", "fs-read-file", "global-shortcut-all", "http-all", "path-all", "shell-open", "system-tray", "window-all"] }
winapi = { version = "0.3.9", features = ["winuser"] }
window-shadows = "0.2.1"
window-vibrancy = "0.3.2"
mki = "0.2.3"
once_cell = "1.17.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tauri-plugin-sqlite]
git = "https://github.com/lzdyes/tauri-plugin-sqlite"
tag = "v0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
